syntax = "proto3";

package cognobserve.v1;

option go_package = "github.com/cognobserve/ingest/internal/proto/cognobservev1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "cognobserve/v1/common.proto";

// User information for tracking end-users
message UserInfo {
  optional string name = 1;
  optional string email = 2;
  optional google.protobuf.Struct metadata = 3;
}

// Request to ingest a trace with spans
message IngestTraceRequest {
  // Trace information
  optional string trace_id = 1;  // Optional, server generates if not provided
  string name = 2;
  optional google.protobuf.Struct metadata = 3;

  // Spans to ingest
  repeated IngestSpan spans = 4;

  // Session tracking (for multi-turn conversations)
  optional string session_id = 5;

  // User tracking (end-users of AI applications)
  optional string user_id = 6;
  optional UserInfo user = 7;
}

// Span data for ingestion
message IngestSpan {
  optional string span_id = 1;  // Optional, server generates if not provided
  optional string parent_span_id = 2;
  string name = 3;
  google.protobuf.Timestamp start_time = 4;
  optional google.protobuf.Timestamp end_time = 5;
  optional google.protobuf.Struct input = 6;
  optional google.protobuf.Struct output = 7;
  optional google.protobuf.Struct metadata = 8;
  optional string model = 9;
  optional google.protobuf.Struct model_parameters = 10;
  optional TokenUsage usage = 11;
  SpanLevel level = 12;
  optional string status_message = 13;
}

// Response after ingesting a trace
message IngestTraceResponse {
  string trace_id = 1;
  repeated string span_ids = 2;
  bool success = 3;
}

// Batch ingestion request
message IngestBatchRequest {
  repeated IngestTraceRequest traces = 1;
}

// Batch ingestion response
message IngestBatchResponse {
  repeated IngestTraceResponse results = 1;
  int32 success_count = 2;
  int32 error_count = 3;
}

// Health check
message HealthRequest {}

message HealthResponse {
  string status = 1;
  string version = 2;
}
